--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(banking_system src/main.cpp
         src/database/database.cpp
         include/main.h
+        src/errorMessage.cpp
+        include/errorMessage.h
 )
