PAssword validator added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(banking_system src/main.cpp
         src/database/database.cpp
         include/main.h
-        src/errorMessage.cpp
+        src/services/errorMessage.cpp
         include/errorMessage.h
+        src/services/registrationValidator.cpp
+        include/registrationValidator.h
 )
